* Removed remaining MassView string.
* Rewrote command-line handling.
* Changed command-line syntax - CHECK HELP FOR THE NEW SYNTAX
* File metadata now prints the filename so that you know what file each piece of metadata is for
* Fixed bug where SymX always claimed another instance was running
* Refactored HTTP client handling
* Fixed INI file loading
NEW FUNCTIONALITY:
For real symbol servers (not MSDL), SymX will now parse the /000Admin folder if you use -mode Parse000Admin. 
This will download all of the symstore in most cases. However, there are some cases (such as nvidia's server) where it wipes history.txt every time they push a new version, so it will only grab the latest version.

Very sorry for the delay. Been busy with other stuff.

4.0.0 Alpha 3 (July 19, 2022):
* Added configurability. Settings can be optionally stored in SymX.ini, and will be loaded from it if it exists. 
Additionally, you can use the -inipath option in order to specify a custom INI to load.
* Fixed a crash when -outfile specified a folder or file that already existed.
* Fixed a crash on zero byte files
* Minor refactoring to remove some redundant code in the CSV generation mode
* Got rid of all remaining independent MassView branding
* Rewrote help to specify it by section
* SymX will now not create SuccessfulURLs.log if it detects another instance of SymX is running.
* SymX will no longer try to download nonexistent files during the download stage.
* Changed strings to reflect fact that SymX supports more symbol servers than just the official Microsoft symbol server.

4.0.0 Alpha 2.2 (July 14, 2022):
* Fixed successful downloads sometimes not incrementing

4.0.0 Alpha 2.1 (June 26, 2022):
* Fixed -numdownloads

4.0.0 Alpha 2 (June 26, 2022):
* Downloads are now multithreaded! By default, the number of threads used for downloading will be set to -numthreads (except if it is above 15, where it will be set to 15). However, if you want to override the value, you can use -numdownloads.