@@ -7,7 +7,7 @@ using System.Reflection;
 [assembly: AssemblyDescription("An MSDL-compatible SymStore bulk download tool")]
 [assembly: AssemblyVersion("4.0.0.131")]
 [assembly: AssemblyFileVersion("4.0.0.131")]
-[assembly: AssemblyInformationalVersion("4.0.0-alpha4 (build 131, built 2022-09-06 12:58:04)")]
+[assembly: AssemblyInformationalVersion("4.0.0-alpha4 (build 131, built 2022-09-06 13:09:16)")]
 
 
 namespace SymX
@@ -22,7 +22,7 @@ namespace SymX
 		public static string SYMX_VERSION_SPECIFIER = "alpha4";
 
 		public static string SYMX_VERSION_STRING = "4.0.0-alpha4";
-		public static string SYMX_VERSION_EXTENDED_STRING = "4.0.0-alpha4 (build 131, built 2022-09-06 12:58:04)";
+		public static string SYMX_VERSION_EXTENDED_STRING = "4.0.0-alpha4 (build 131, built 2022-09-06 13:09:16)";
 	}
 }
 
